--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "r": "^0.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-player": "^2.14.1",
     "react-qr-code": "^2.0.12",
     "react-qr-reader": "^3.0.0-beta-1",
