--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.9",
+    "html2canvas": "^1.4.1",
     "jsqr": "^1.4.0",
     "qrcode": "^1.5.3",
     "qrcode.react": "^3.1.0",
