--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@fullcalendar/react": "^6.1.11",
     "@mui/icons-material": "^5.11.16",
     "@mui/lab": "^5.0.0-alpha.136",
-    "@mui/material": "^5.15.10",
+    "@mui/material": "^5.15.11",
     "@mui/styled-engine-sc": "^5.12.0",
     "@mui/x-data-grid": "^6.10.1",
     "@mui/x-date-pickers": "^6.9.2",
@@ -29,6 +29,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-material-ui-carousel": "^3.4.2",
     "react-modal": "^3.16.1",
     "react-player": "^2.14.1",
     "react-qr-code": "^2.0.12",
