--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chart.js": "^4.4.1",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.9",
+    "html-to-image": "^1.11.11",
     "html2canvas": "^1.4.1",
     "jsqr": "^1.4.0",
     "qrcode": "^1.5.3",
