--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "r": "^0.0.5",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "^18.2.0",
     "react-material-ui-carousel": "^3.4.2",
     "react-modal": "^3.16.1",
