--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/user-event": "^13.5.0",
     "add": "^2.0.6",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.3",
     "chart.js": "^4.4.1",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.9",
@@ -28,6 +29,7 @@
     "qrcode.react": "^3.1.0",
     "r": "^0.0.5",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.0-beta.1",
     "react-chartjs-2": "^5.2.0",
     "react-credit-cards": "^0.8.3",
     "react-dom": "^18.2.0",
