--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "react-secure-storage": "^1.3.2",
+    "react-slick": "^0.30.2",
     "react-webcam": "^7.2.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.10",
     "victory": "^36.9.1",
     "web-vitals": "^2.1.4",
