--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "chart.js": "^4.4.1",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.9",
+    "file-saver": "^2.0.5",
     "html-to-image": "^1.11.11",
     "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "jsqr": "^1.4.0",
     "qrcode": "^1.5.3",
     "qrcode.react": "^3.1.0",
