--- a/package.json
+++ b/package.json
@@ -3,14 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
     "@fullcalendar/daygrid": "^6.1.11",
     "@fullcalendar/react": "^6.1.11",
-    "@mui/icons-material": "^5.11.16",
+    "@mui/icons-material": "^5.15.12",
     "@mui/lab": "^5.0.0-alpha.136",
-    "@mui/material": "^5.15.11",
+    "@mui/material": "^5.15.12",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@mui/styles": "^5.15.12",
     "@mui/x-data-grid": "^6.10.1",
     "@mui/x-date-pickers": "^6.9.2",
     "@testing-library/jest-dom": "^5.16.5",
