--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "react-secure-storage": "^1.3.2",
+    "react-simple-chatbot": "^0.6.1",
     "react-slick": "^0.30.2",
     "react-webcam": "^7.2.0",
     "slick-carousel": "^1.8.1",
