--- a/package.json
+++ b/package.json
@@ -42,15 +42,18 @@
     "react-qr-code": "^2.0.12",
     "react-qr-reader": "^3.0.0-beta-1",
     "react-router-dom": "^6.22.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-secure-storage": "^1.3.2",
     "react-simple-chatbot": "^0.6.1",
     "react-slick": "^0.30.2",
     "react-webcam": "^7.2.0",
+    "reactstrap": "^9.2.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.10",
+    "sweetalert2": "^11.10.6",
     "victory": "^36.9.1",
     "web-vitals": "^2.1.4",
+    "webpack": "^5.90.3",
     "yarn": "^1.22.19"
   },
   "scripts": {
