--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "reactstrap": "^9.2.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.10",
-    "sweetalert2": "^11.10.6",
+    "sweetalert2": "^11.10.7",
+    "sweetalert2-react-content": "^5.0.7",
     "victory": "^36.9.1",
     "web-vitals": "^2.1.4",
     "webpack": "^5.90.3",
